// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  title="description"
>
  <b>
    Boil Size
     
  </b>
  20 l
   (5.28 gal)
</div>
`;

exports[`renders without crashing on US units 1`] = `
<div
  title="description"
>
  <b>
    Boil Size
     
  </b>
  18.93 l
   (5 gal)
</div>
`;
